samples/_failures_safe/1761480899_592520_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24f7859e.c: In function ‘main’:
./samples/SAFE/__tmp_24f7859e.c:162:9: error: expected declaration or statement at end of input
  162 |         }
      |         ^
./samples/SAFE/__tmp_24f7859e.c:162:9: error: expected declaration or statement at end of input
